# kevlar-benchmark

./: .coverage  .gitignore  CLAUDE.md  README.md  extension-run.yaml  langchain_asi02_adapter.py  langchain_asi04_adapter.py  local_agent.py  pyproject.toml  real_agent.py  real_agent_adapter.py  requirements.txt  test_asi01.py  test_asi02.py  test_asi03.py  test_asi05.py  test_asi08.py  test_asi09.py  test_asi10.py
modules/critical/asi01_goal_hijack/: __init__.py  goal_hijack_orchestrator.py
modules/critical/asi01_goal_hijack/attacks/: echoleak_simulator.py  goal_drift_scheduler.py  inception_doc_injection.py  operator_web_injection.py
modules/critical/asi01_goal_hijack/detectors/: data_exfil_detector.py  goal_drift_analyzer.py
modules/critical/asi01_goal_hijack/utils/: mock_agents.py  payload_corpus.py
modules/critical/asi02_tool_abuse/: session_log.py  tool_abuse_orchestrator.py
modules/critical/asi03_identity_abuse/: identity_orchestrator.py  session_log.py
modules/critical/asi05_rce/: rce_orchestrator.py
modules/high/asi08_cascading_failures/: cascading_orchestrator.py  session_log.py
modules/medium/asi09_human_trust/: human_trust_orchestrator.py  session_log.py
modules/medium/asi10_rogue_agents/: rogue_agent_orchestrator.py  session_log.py
src/kevlar/: __init__.py  cli.py
src/kevlar/agents/: __init__.py  langchain.py  mock.py
src/kevlar/agents/adapters/: __init__.py  (+2 more)
src/kevlar/core/: __init__.py  constants.py  types.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_orchestrator_pipeline.py  test_runner_cli.py
tests/unit/: test_agent_fallback.py  test_langchain_asi04_adapter.py  test_runner.py
(+152 files in other folders)
