[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kevlar"]

[project]
name = "kevlar-benchmark"
version = "1.2"
description = "Red team security benchmark for testing AI agents against OWASP Top 10 for Agentic Applications"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "autopep8>=2.0.0",
    "click>=8.0.0",
    "docker>=6.1.0",
    "faiss-cpu>=1.7.0",
    "kubernetes>=28.1.0",
    "langchain>=0.1.0",
    "langchain-community>=0.1.0",
    "langchain-ollama>=0.1.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "playwright>=1.40.0",
    "pyautogen>=0.2.0",
    "requests>=2.31.0",
    "selenium>=4.15.0",
    "webdriver-manager>=4.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=3.5.0",
    "freezegun>=1.2.0",
    "responses>=0.25.0",
]

[project.scripts]
kevlar = "kevlar.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-v",
    "--cov=src/kevlar",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--ignore=.venv",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
]

[tool.coverage.run]
source = ["src/kevlar"]
omit = [".venv/*", "tests/*", "htmlcov/*", "scripts/*"]
branch = true

[tool.coverage.report]
fail_under = 40
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
